--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
-<h1>UT Useful Websites</h1>
+<center><h1>UT Websites</h1></center>
+<img src="https://www.utexas.edu/sites/default/files/utlogo.png" alt="UT Logo" style="width:200px;height:200px;">
 <a href="https://www.utexas.edu/">UT Website</a>
