--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
 <center><h1>UT Websites</h1></center>
-<img src="https://www.utexas.edu/sites/default/files/utlogo.png" alt="UT Logo" style="width:200px;height:200px;">
-<a href="https://www.utexas.edu/">UT Website</a>
+<img src= "canvaslogo.jpeg" alt="Canvas">
+<a href="https://canvas.utexas.edu/">Canvas</a>
+<div class = AcademicResources>
+    <h2>Academic Resources</h2>
+    <ul>
+        <li><a href="https://www.utexas.edu/academics">Academics</a></li>
+        <li><a href="https://www.utexas.edu/academics/academic-calendar">Academic Calendar</a></li>
+        <li><a href="https://www.utexas.edu/academics/academic-calendar">Course Schedule</a></li>
+        <li><a href="https://www.utexas.edu/academics/academic-calendar">Degree Programs</a></li>
+    </ul>
+</div>
