--- a/index.html
+++ b/index.html
@@ -1,12 +1,27 @@
-<center><h1>UT Websites</h1></center>
-<img src= "canvaslogo.jpeg" alt="Canvas">
-<a href="https://canvas.utexas.edu/">Canvas</a>
-<div class = AcademicResources>
-    <h2>Academic Resources</h2>
-    <ul>
-        <li><a href="https://www.utexas.edu/academics">Academics</a></li>
-        <li><a href="https://www.utexas.edu/academics/academic-calendar">Academic Calendar</a></li>
-        <li><a href="https://www.utexas.edu/academics/academic-calendar">Course Schedule</a></li>
-        <li><a href="https://www.utexas.edu/academics/academic-calendar">Degree Programs</a></li>
-    </ul>
-</div>
+<head>
+    <meta name="description" content="Some UT Austin academic and campus resources.">
+    <title> UT Websites </title>
+</head>
+<body>
+    <h1 class="title">UT Websites</h1>
+    <img src= "canvasLogo.jpeg" alt="Canvas" width="50" height="50">
+    <a id = "canvas-link" href="https://canvas.utexas.edu/">Canvas</a>
+    <div class = "academic-resources">
+        <h2>Academic Resources</h2>
+        <ul>
+            <li><a href="https://www.utexas.edu/academics">Academics</a></li>
+            <li><a href="https://www.utexas.edu/academics/calendars">Academic Calendar</a></li>
+            <li><a href="https://www.utexas.edu/academics/schedules">Course Schedule</a></li>
+            <li><a href="https://www.catalog.utexas.edu">Degree Programs</a></li>
+        </ul>
+    </div>
+    <div class = "campus-resources">
+        <h2>Campus Resources</h2>
+        <ul>
+            <li><a href="https://www.utexas.edu/campus">Campus</a></li>
+            <li><a href="https://parking.utexas.edu/transportation">Transportation</a></li>
+            <li><a href="https://parking.utexas.edu/">Parking</a></li>
+            <li><a href="https://maps.utexas.edu/">Maps</a></li>
+        </ul>
+    </div>
+</body>
