--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1 class="title">UT Websites</h1>
-    <img src= "canvasLogo.jpeg" alt="Canvas" width="50" height="50">
+    <img src= "canvaslogo.jpeg" alt="Canvas" width="50" height="50">
     <a id = "canvas-link" href="https://canvas.utexas.edu/">Canvas</a>
     <div class = "academic-resources">
         <h2>Academic Resources</h2>
