--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <h2>Academic Resources</h2>
         <ul>
             <li><a href="https://www.utexas.edu/academics">Academics</a></li>
-            <li><a href="https://www.utexas.edu/academics/calendars">Academic Calendar</a></li>
-            <li><a href="https://www.utexas.edu/academics/schedules">Course Schedule</a></li>
+            <li><a href="https://www.utexas.edu/calendars">Academic Calendar</a></li>
+            <li><a href="https://www.utexas.edu/schedules">Course Schedule</a></li>
             <li><a href="https://www.catalog.utexas.edu">Degree Programs</a></li>
         </ul>
     </div>
