--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
     <meta name="description" content="Some UT Austin academic and campus resources.">
     <title> UT Websites </title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1 class="title">UT Websites</h1>
