--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
     <meta name="description" content="Some UT Austin academic and campus resources.">
     <title> UT Websites </title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     <h1 class="title">UT Websites</h1>
@@ -13,7 +13,7 @@
             <li><a href="https://www.utexas.edu/academics">Academics</a></li>
             <li><a href="https://www.utexas.edu/calendars">Academic Calendar</a></li>
             <li><a href="https://www.utexas.edu/schedules">Course Schedule</a></li>
-            <li><a href="https://www.catalog.utexas.edu">Degree Programs</a></li>
+            <li><a href="https://catalog.utexas.edu/undergraduate/the-university/degree-programs/">Degree Programs</a></li>
         </ul>
     </div>
     <div class = "campus-resources">
